fixed bss bala signup